Access control with role name and group name string matching.